plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'sqlive-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url 'https://maven.aliyun.com/repository/spring/' }
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    //noinspection GrUnresolvedAccess
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.xerial:sqlite-jdbc:3.51.1.0'

    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
    //noinspection GrUnresolvedAccess
    useJUnitPlatform()
    def cpu = Runtime.runtime.availableProcessors()
    maxParallelForks = Math.max(1, Math.min((cpu / 2) as int, 4))
    jvmArgs '-Xshare:auto', '-XX:+UseParallelGC', '-XX:MaxRAMPercentage=50.0'
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    onlyIf { System.getenv('CI') == 'true' || System.getProperty('jacoco') == 'true' }
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    onlyIf { System.getenv('CI') == 'true' || System.getProperty('jacoco') == 'true' }
    violationRules {
        rule {
            limit {
                minimum = 0.50
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification
